style.css
@font-face {
	font-family: Comic;
	src: url(ComicNeue-Regular.woff2);
}

* {
	scroll-behavior: smooth;
	margin: 0;
	padding: 0;
}

* element {
	overflow: -moz-scrollbars-none;
}

* a {
	text-decoration: none;
	color: var(--text-color);
}
* a:hover {
	color:rgb(70, 0, 119);
}


@media (prefers-color-scheme: light) {
	body {
		background-color: rgb(255, 255, 255);
		color: rgb(0, 0, 0);
		font-family: Comic;
	}

	:root {
		--white-shadow: rgba(255, 255, 255, 0.6);
		--dark-shadow: rgba(0, 0, 0, 0.6);
		--section-bg: rgb(196, 196, 196);
		--text-color: rgb(0, 0, 0);
	}
}

@media (prefers-color-scheme: light) {
	body {
		background-color: rgb(47, 31, 0);
		color: grey;
		font-family: Comic;
	}
	
	:root {
		--white-shadow: rgba(147, 131, 100, 0.4);
		--dark-shadow: rgba(0, 0, 0, 0.6);
		--section-bg: rgba(0, 0, 0, 0.1);
		--text-color: grey;
	}
}

header {
	background-color: var(--section-bg);
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: auto;
	height: auto;

	text-decoration: none;
	font-size: 40px;
}

header img {
	transition: all 300ms;
	height: 80px;
}

header img:hover {
	transform: scale(1.2);
}

header ul {
	padding: 10px;
	list-style: none;
}
header ul li {
	display: inline-block;
	padding: 0px, 20px;
	color: var(--text-color)
}

header ul li a {
	transition: all 300ms;
	text-decoration:underline;
	color: var(--text-color);
}

header ul li :hover {
	transition: all 300ms;
	color: rgb(70, 0, 119);
}

.me ul{
	display: flex;
	list-style: none;
}

.me li {
	display: inline-block;
}

.me img {
	position: relative;
	height: 50vh;
	border-radius: 40px;
	box-shadow: -1px -1px 3px var(--white-shadow), 1px 1px 3px var(--dark-shadow);
}


.selfie :hover {
	transition: all 300ms;
	filter: blur(3px) brightness(0.4);
	color: var(--text-color);
}

.projectList {
	margin: 1%;
	border-radius: 40px;
	padding-bottom: 10px;
	background-color: var(--section-bg);
}
.projectList ul element {
	overflow: -moz-scrollbars-none;
}

.projectList ::-webkit-scrollbar {
	padding: 10px;
	border-radius: 10px;
}

.projectList ul::-webkit-scrollbar-thumb {
	border-radius: 10px;
	background: rgba(0, 0, 0, 0.2);
}

.projectList ul::-webkit-scrollbar-button:single-button:horizontal:decrement {
	height:40px;
	width: 40px;
	background-position: center 5px;
}

.projectList ul::-webkit-scrollbar-button:single-button:horizontal:increment {
	height:40px;
	width: 40px;
	background-position: center 5px;
}

.projectList ul {
	display: flex;
	overflow-x: scroll;
	
	scroll-padding: 0 0;
	scroll-snap-type: x mandatory !important;
}

.projectList li {
	list-style: none;
	display: inline-block;

	margin: 3%;
	scroll-snap-align: center;
}

.projectName {
	text-align: center;
	font-size: 40px;
}

.projectDescription {
	text-align: center;
	width: 40vw;
	max-width: 40vh;
}

.shadow {
	transition: all 300ms;
}
.projectList li img {
	border-radius: 20%;
	box-shadow: -3px -3px 3px var(--white-shadow), 3px 3px 3px var(--dark-shadow);
	width: 40vw;
	max-width: 40vh;
}

.shadow :hover {
	transition: all 300ms;
	filter: blur(3px);
}

.leftright {
	display: flex;
	justify-content: center;
}

.leftright li {
	padding: 10px;
	list-style: none;
	display: inline-block;
}

.leftright li a {
	color: var(--text-color);
	text-decoration: none;
	font-size: 40px;
}

/* Not happy with this solution. Working on fixing up SVGs for the buttons on the scrollbar to work better for pc's*/

.leftright li a:hover {
	transition: all 300ms;
	color: rgb(70, 0, 119);
}

footer {
	grid-area: footer;
	bottom: 0;
	width: 100%;
	height:auto;
	align-items: center;
	padding: auto;
	height: auto;
}

.contactBar {
	background-color: var(--section-bg);
	width: 100%;
	display: flex;
	justify-content:center;
}

.contactBar li {
	list-style: none;
	display: inline-block;
	margin: auto;
}

.contactBar li a {
	transition: color 300ms;
	text-decoration: none;
	color: var(--text-color);
	margin: 10px;
	font-size: 40px;
}
.contactBar li a:hover {
	color: rgb(70, 0, 119);
}

